# kagi

./: CLAUDE.md  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
module/: default.nix
src/: api.rs  clipboard.rs  config.rs  input.rs  main.rs  mcp.rs  render.rs  scripting.rs  vault.rs
