[package]
name = "kagibako"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Kagi (鍵) — GPU-rendered 1Password client powered by the 1Password service API"
homepage = "https://github.com/pleme-io/kagi"
repository = "https://github.com/pleme-io/kagi"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/kagibako"
categories = ["command-line-utilities"]
keywords = ["password", "1password", "security", "gpu", "credentials"]
publish = true

[[bin]]
name = "kagi"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
# Pleme-io shared libraries
garasu = { git = "https://github.com/pleme-io/garasu" }
madori = { git = "https://github.com/pleme-io/madori" }
egaku = { git = "https://github.com/pleme-io/egaku" }
irodzuki = { git = "https://github.com/pleme-io/irodzuki" }
hasami = { git = "https://github.com/pleme-io/hasami" }
todoku = { git = "https://github.com/pleme-io/todoku" }
tsunagu = { git = "https://github.com/pleme-io/tsunagu" }
kaname = { git = "https://github.com/pleme-io/kaname" }
shikumi = { git = "https://github.com/pleme-io/shikumi" }
soushi = { git = "https://github.com/pleme-io/soushi" }
awase = { git = "https://github.com/pleme-io/awase" }
schemars = "1"

# GPU rendering (via madori/garasu, but needed for wgpu types in render code)
wgpu = "25"
winit = "0.30"
pollster = "0.4"
glyphon = "0.9"

# 1Password Connect / CLI integration
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1"

# CLI and config
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
dirs = "6.0"

# Security
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
